--- a/resumeBuilder/package.json
+++ b/resumeBuilder/package.json
@@ -12,19 +12,26 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.27.0",
     "@google/genai": "^0.8.0",
+    "@radix-ui/react-alert-dialog": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.11",
     "@radix-ui/react-slot": "^1.2.0",
+    "@react-pdf/renderer": "^4.3.0",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
     "pg": "^8.14.1",
     "react": "^19.0.0",
+    "react-doc-viewer": "^0.1.14",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
     "react-simple-wysiwyg": "^3.2.2",
+    "react-web-share": "^2.0.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
